feat(v2ray): enhance connection handling and logging, improve routing configuration, and add DNS support
- Improved connection logging with timestamps and detailed server information.
- Added DNS provider options (Cloudflare, Google, Quad9, OpenDNS, custom) to the V2Ray configuration.
- Enhanced routing rules to include app-based bypass and ad-blocking features.
- Implemented a wait mechanism for V2Ray readiness, including SOCKS connection testing.
- Introduced a new shell script (test-connection.sh) for testing V2Ray VPN connections and system proxy settings.
- Updated TypeScript configuration to exclude test files from compilation.

--- a/tsconfig.main.json
+++ b/tsconfig.main.json
@@ -8,5 +8,5 @@
     "strict": false
   },
   "include": ["src/main", "src/utils", "src/db", "src/services"],
-  "exclude": ["src/renderer", "node_modules"]
+  "exclude": ["src/renderer", "node_modules", "**/*.test.ts"]
 }
