--- a/package.json
+++ b/package.json
@@ -51,6 +51,14 @@
       "react-app"
     ]
   },
+  "jest": {
+    "moduleNameMapper": {
+      "^(\\.{1,2}/.*)\\.js$": "$1"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(uuid)/)"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
