feat: enhance server connection UI and update settings management
- Improved the connection button in ServerManager with a loading indicator.
- Refactored Settings component to include GitHub update checks and app info display.
- Added functionality to handle updates from GitHub, including error handling and user feedback.
- Introduced new proxy and routing mode normalization functions for better settings management.
- Enhanced V2RayService with reconnect logic and improved handling of unexpected disconnects.
- Updated tests to cover new features and ensure stability.
- Expanded electron types to support new update-related API methods.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "v2ray-vpn",
-  "version": "1.0.0",
+  "version": "0.1.0-beta.1",
   "description": "V2Ray VPN client with per-app routing support",
   "author": "V2Ray VPN Team",
   "main": "dist/main/main/index.js",
@@ -16,7 +16,8 @@
     "build:main": "tsc --project tsconfig.main.json",
     "fix:package": "node -e \"const pkg = require('./package.json'); pkg.type = 'commonjs'; require('fs').writeFileSync('./dist/package.json', JSON.stringify(pkg, null, 2))\"",
     "pack": "electron-builder --publish=never",
-    "dist": "npm run build && electron-builder",
+    "dist": "npm run build && electron-builder --publish=never",
+    "dist:github": "npm run build && electron-builder --publish=always",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
